--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
             android:name=".service.AppService"
             android:enabled="true"
             android:exported="false"
-            android:stopWithTask="false"
+            android:stopWithTask="true"
             android:foregroundServiceType="dataSync" />
 
         <activity
