--- a/python-client/config.ini
+++ b/python-client/config.ini
@@ -2,8 +2,10 @@
 # 开启后如果设备分享文本/文件到电脑会发送结果通知
 isNotification = False
 # 开启后会对传输的文本进行加密
-isEncrypt = False
+isEncrypt = True
 # 设置一个私钥以提升安全性，不设置将使用软件默认私钥
-privateKey = 114514
+privateKey = 123456
 # 要连接的设备IP
-ipAddress =
+ipAddress = 127.0.0.1
+# 设备昵称
+deviceName = MyPC
